--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-</head>
-<body>
-    <div class="menu">
-        <h1>Je suis le plus gros titre HTML</h1>
-    </div>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Page Title</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    </head>
+    <body>
+        <div class="menu">
+            <h1>Je suis le plus gros titre HTML</h1>
+        </div>
 
-    <div class="corps">
-        <p>Début de paragraphie: je suis un site composé de 3 div principales Avec les class : Menu, Corps et Footer. Le corps possède une propriété qui permet d'avoir une certaine hauteur de 350 px. Le footer est à 100px et le menu 75. à la fin de ce paragraphe il y aura 2 div de contenu . fin de paragraphe</p>
-    </div>
+        <div class="corps">
+            <p>Début de paragraphie: je suis un site composé de 3 div principales Avec les class : Menu, Corps et Footer. Le corps possède une propriété qui permet d'avoir une certaine hauteur de 350 px. Le footer est à 100px et le menu 75. à la fin de ce paragraphe il y aura 2 div de contenu . fin de paragraphe</p>
+            <div id="contenu">
+                <div id="sous-contenuA">
+                    <p>Dans cette div Bleu voici une image</p>
+                    <img src="https://i.aquarelle.com/01/images/produits/bouquet-de-roses-arlequin-350x350-50589.jpg" height="250px">
+                </div>
+                <div id="sous-contenuB">
+                    <p>Dans cette div verte Voici un petit tableau avec une class table</p>
+                </div>
+            </div>
+        </div>
 
-    <div class="footer">
-        <p>lien</p>
-    </div>
-</body>
+        <div class="footer">
+            <a href="http://google.com">je suis un lien vers google</a>
+        </div>
+    </body>
 </html>
