--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 
         <div class="corps">
             <p>Début de paragraphie: je suis un site composé de 3 div principales Avec les class : Menu, Corps et Footer. Le corps possède une propriété qui permet d'avoir une certaine hauteur de 350 px. Le footer est à 100px et le menu 75. à la fin de ce paragraphe il y aura 2 div de contenu . fin de paragraphe</p>
-            <div id="contenu">
+            <div>
                 <div id="sous-contenuA">
                     <p>Dans cette div Bleu voici une image</p>
                     <img src="https://i.aquarelle.com/01/images/produits/bouquet-de-roses-arlequin-350x350-50589.jpg" height="250px">
                 </div>
                 <div id="sous-contenuB">
                     <p>Dans cette div verte Voici un petit tableau avec une class table</p>
+                    <table>
+                        <tr><td id="cell1">Celule 1 avec une marge interieur de 10px</td>
+                        <td rowspan="2">Je suis une celule fusionné</td></tr>
+                        <tr><td>Celule 3</td></tr>
+                    </table>
                 </div>
             </div>
         </div>
